[package]
name = "supra"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = "2.33.3"
lazy_static = "1.4.0"
phf = { version = "0.10", features = ["macros"] }
regex = "1.5"
ron = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7.0"
#slog = { version = "2.7.0", features = ["max_level_trace"]}
slog-async = "2.7.0"
slog-scope = "4.4.0"
slog-json = "2.4.0"
slog-term = "2.8.0"

[profile.release]
lto = true
