[package]
name = "supra"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "3.2.17", features = ["cargo"] }
git2 = "0.17"
lazy_static = "1.4.0"
pandoc = "0.8.9"
phf = { version = "0.11", features = ["macros"] }
regex = "1.5"
ron = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.11"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.7.0"
slog-scope = "4.4.0"
slog-json = "2.4.0"
slog-term = "2.8.0"
zip = "0.6.2"

[profile.release]
lto = true
opt-level = 3
